--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.3",
-    "rss-parser": "^3.13.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
